srini-padala/cncf/nats-connector.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: nats-connector
    component: nats-connector
  name: nats-connector
  namespace: openfaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-connector
      component: nats-connector
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nats-connector
        component: nats-connector
    spec:
      containers:
      - env:
        - name: upstream_timeout
          value: 1m1s
        - name: gateway_url
          value: http://gateway.openfaas:8080
        - name: topics
          value: nats-test,nats-email
        - name: print_response
          value: "true"
        - name: print_response_body
          value: "true"
        - name: basic_auth
          value: "true"
        - name: secret_mount_path
          value: /var/secrets/
        - name: topic_delimiter
          value: ','
        - name: asynchronous_invocation
          value: "false"
        image: openfaas/nats-connector:0.2.2
        imagePullPolicy: IfNotPresent
        name: nats-connector
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/secrets/
          name: auth
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: auth
        secret:
          defaultMode: 420
          secretName: basic-auth
